<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/edtZipcodeSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:inputType="number"
        android:hint="@string/zipcodeinputhint"
        android:maxLength="5"/>

    <ScrollView
        android:id="@+id/svWeatherDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edtZipcodeSearch">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivIconForWeather"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tvPlaceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:text="@string/placename"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPlaceName"
                    android:layout_alignParentLeft="true"
                    android:text="@string/description"
                    android:padding="5dp"/>


                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTemp"
                    android:layout_alignParentLeft="true"
                    android:text="@string/tempinc"
                    android:padding="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/tvLastUpdatedOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvTemp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/lastupdatedon"
                        android:padding="5dp"
                        />

                    <ImageView
                    android:id="@+id/ivRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/refresh"
                    />
                </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>

